--- a/site/themes/sogilis/layouts/index.html
+++ b/site/themes/sogilis/layouts/index.html
@@ -1,12 +1,8 @@
 {{ define "main" }}
     <div id="blog_index">
-        {{ range (.Paginator 9).Pages }}
-            {{ .Render "summary" }}
+        {{ range (where .Site.AllPages.ByDate "Kind" "page").Reverse }}
+        {{ .Render "summary" }}
         {{ end }}
-    </div>
-
-    <div class="blog_index_pagination">
-        {{ template "_internal/pagination.html" . }}
     </div>
 {{ end }}
 
