--- a/site/themes/sogilis/assets/css/header.css
+++ b/site/themes/sogilis/assets/css/header.css
@@ -4,6 +4,7 @@ header {
     height: 5rem;
     width: 100%;
     box-sizing: border-box;
+    background-color: white;
 }
 
 header > div {
@@ -14,8 +15,7 @@ header > div {
 
 /* When we scroll */
 header.content_header_scroll {
-    margin-top: 0px;
-    transition: all 0.5s;
-    box-shadow: 0px 0px 16px 3px rgba(0,0,0,0.15);
-    background-color:white;
+    margin-top: 0;
+    box-shadow: 0 0 1rem 0.2rem rgba(0, 0, 0, 0.15);
+    transition: margin-top 0.5s, box-shadow 0.5s;
 }
