--- a/site/themes/sogilis/layouts/_default/baseof.html
+++ b/site/themes/sogilis/layouts/_default/baseof.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="fr">
-    {{- partial "head.html" . -}}
-    <body>
-        {{- partial "header.html" . -}}
-        <main class="mainColumn">
-        {{- block "main" . }}{{- end }}
-        </main>
-        {{- partial "footer.html" . -}}
-        {{- partial "scripts.html" . -}}
-    </body>
+  {{- partial "head.html" . -}}
+  <body>
+    {{- partial "header.html" . -}}
+    <main class="mainColumn">
+      {{- block "main" . }}{{- end }}
+    </main>
+    {{- partial "footer.html" . -}} {{- partial "scripts.html" . -}}
+  </body>
 </html>
