--- a/site/themes/sogilis/layouts/partials/head.html
+++ b/site/themes/sogilis/layouts/partials/head.html
@@ -1,41 +1,61 @@
-    <head>
-        <meta charset="utf-8" />
-        <title>Sogilis | {{ .Title }}</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="{{ .Summary | default .Site.Params.SiteDescription }}">
+<head>
+  <meta charset="utf-8" />
+  <title>Sogilis | {{ .Title }}</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta
+    name="description"
+    content="{{ .Summary | default .Site.Params.SiteDescription }}"
+  />
 
-        <link rel="stylesheet" href="{{ "css/typeface-eb-garamond/index.css" | relURL }}" type="text/css" />
+  <link
+    rel="stylesheet"
+    href="{{ "css/typeface-eb-garamond/index.css" | relURL }}"
+    type="text/css"
+    />
+  <link
+    rel="stylesheet"
+    href="{{ "css/typeface-montserrat/index.css" | relURL }}"
+    type="text/css"
+  />
 
-        <link rel="stylesheet" href="{{ "css/typeface-montserrat/index.css" | relURL }}" type="text/css" />
+  <!-- Reboot builds upon Normalize, providing many HTML elements with somewhat -->
+  <!-- opinionated styles using only element selectors.  -->
+  <!-- Source code is at https://github.com/twbs/bootstrap/blob/master/scss/_reboot.scss -->
+  <!-- https://getbootstrap.com/docs/4.3/content/reboot/ -->
+  <!-- It's a very very light library!! -->
+  {{ $reboot := resources.Get "css/reboot.min.css" | minify | fingerprint }}
+  <link rel="stylesheet" href="{{ $reboot.Permalink }}" type="text/css" />
 
-        <!-- Reboot builds upon Normalize, providing many HTML elements with somewhat -->
-        <!-- opinionated styles using only element selectors.  -->
-        <!-- Source code is at https://github.com/twbs/bootstrap/blob/master/scss/_reboot.scss -->
-        <!-- https://getbootstrap.com/docs/4.3/content/reboot/ -->
-        <!-- It's a very very light library!! -->
-        {{ $reboot := resources.Get "css/reboot.min.css" | minify | fingerprint }}
-        <link rel="stylesheet" href="{{ $reboot.Permalink }}" type="text/css" />
+  {{ $footer := resources.Get "css/footer.css" | minify | fingerprint }}
+  <link rel="stylesheet" href="{{ $footer.Permalink }}" type="text/css" />
 
-        {{ $footer := resources.Get "css/footer.css" | minify | fingerprint }}
-        <link rel="stylesheet" href="{{ $footer.Permalink }}" type="text/css" />
+  {{ $index_page := resources.Get "css/index-page.css" | minify | fingerprint }}
+  <link rel="stylesheet" href="{{ $index_page.Permalink }}" type="text/css" />
 
-        {{ $index_page := resources.Get "css/index-page.css" | minify | fingerprint }}
-        <link rel="stylesheet" href="{{ $index_page.Permalink }}" type="text/css" />
+  {{ $article := resources.Get "css/article.css" | minify | fingerprint }}
+  <link rel="stylesheet" href="{{ $article.Permalink }}" type="text/css" />
 
-        {{ $article := resources.Get "css/article.css" | minify | fingerprint }}
-        <link rel="stylesheet" href="{{ $article.Permalink }}" type="text/css" />
+  {{ $headerInf767 := resources.Get "css/header-inf767.css" | minify | fingerprint }}
+  <link
+    rel="stylesheet"
+    media="(max-width: 767px)"
+    href="{{ $headerInf767.Permalink }}"
+    type="text/css"
+  />
 
-        {{ $headerInf767 := resources.Get "css/header-inf767.css" | minify | fingerprint }}
-        <link rel="stylesheet" media="(max-width: 767px)" href="{{ $headerInf767.Permalink }}" type="text/css" />
+  {{ $headerSup768 := resources.Get "css/header-sup768.css" | minify | fingerprint }}
+  <link
+    rel="stylesheet"
+    media="(min-width: 767px)"
+    href="{{ $headerSup768.Permalink }}"
+    type="text/css"
+  />
 
-        {{ $headerSup768 := resources.Get "css/header-sup768.css" | minify | fingerprint }}
-        <link rel="stylesheet" media="(min-width: 767px)" href="{{ $headerSup768.Permalink }}" type="text/css" />
+  {{ $header := resources.Get "css/header.css" | minify | fingerprint }}
+  <link rel="stylesheet" href="{{ $header.Permalink }}" type="text/css" />
 
-        {{ $header := resources.Get "css/header.css" | minify | fingerprint }}
-        <link rel="stylesheet" href="{{ $header.Permalink }}" type="text/css" />
+  {{ $shared := resources.Get "css/shared.css" | minify | fingerprint }}
+  <link rel="stylesheet" href="{{ $shared.Permalink }}" type="text/css" />
 
-        {{ $shared := resources.Get "css/shared.css" | minify | fingerprint }}
-        <link rel="stylesheet" href="{{ $shared.Permalink }}" type="text/css" />
-
-        <link rel="icon" type="image/png" href="{{ "images/favicon.png" | relURL }}"/>
-    </head>
+  <link rel="icon" type="image/png" href="{{ "images/favicon.png" | relURL }}"/>
+</head>
