--- a/site/themes/sogilis/layouts/partials/header.html
+++ b/site/themes/sogilis/layouts/partials/header.html
@@ -1,38 +1,36 @@
 <header>
+  <!-- ======================================================================= -->
+  <!-- Menu Desktop (display >= 576 px) -->
+  <!-- ======================================================================= -->
+  <div id="navBarDesktop" class="mainColumn">
+    <a id="soheaderLogo" href="index.html">
+      <img alt="Logo Sogilis" src="{{ "images/logo_sogilis.svg" | relURL }}" />
+    </a>
+    <nav>
+      <div class="dropdown">
+        <a class="dropbtn">{{ i18n "services"}}</a>
+        <div class="dropdown-content">
+          <a href="https://sogilis.fr/services-applications-cloud-native.html">
+            {{ i18n "cloudNativeApplications" }}
+          </a>
+          <a href="https://sogilis.fr/services-embarques-et-iot.html">
+            {{ i18n "embeddedSoftwares" }}
+          </a>
+          <a href="https://sogilis.fr/services-logiciels-critiques.html">
+            {{ i18n "criticalSoftwares" }}
+          </a>
+        </div>
+      </div>
+      <a href="https://sogilis.fr/vision.html">{{ i18n "ourVision" }}</a>
+      <a href="https://sogilis.fr/contact.html">{{ i18n "contact" }}</a>
+    </nav>
+  </div>
 
-<!-- ======================================================================= -->
-                   <!-- Menu Desktop (display >= 576 px) -->
-<!-- ======================================================================= -->
-    <div id="navBarDesktop" class="mainColumn">
-        <a id="soheaderLogo" href="index.html">
-            <img alt="Logo Sogilis" src="{{ "images/logo_sogilis.svg" | relURL }}">
-        </a>
-        <nav>
-            <div class="dropdown">
-                <a class="dropbtn">{{ i18n "services"}}</a>
-                <div class="dropdown-content">
-                    <a href="https://sogilis.fr/services-applications-cloud-native.html">
-                        {{ i18n "cloudNativeApplications" }}
-                    </a>
-                    <a href="https://sogilis.fr/services-embarques-et-iot.html">
-                        {{ i18n "embeddedSoftwares" }}
-                    </a>
-                    <a href="https://sogilis.fr/services-logiciels-critiques.html">
-                        {{ i18n "criticalSoftwares" }}
-                    </a>
-                </div>
-            </div>
-            <a href="https://sogilis.fr/vision.html">{{ i18n "ourVision" }}</a>
-            <a href="https://sogilis.fr/contact.html">{{ i18n "contact" }}</a>
-        </nav>
-    </div>
+  <!-- ======================================================================= -->
+  <!-- Menu Mobile (dispaly < 576 px) -->
+  <!-- ======================================================================= -->
 
-<!-- ======================================================================= -->
-                        <!-- Menu Mobile (dispaly < 576 px) -->
-<!-- ======================================================================= -->
-
-
-    <div id="navBarMobile" class="mainColumn">
+  <div id="navBarMobile" class="mainColumn">
     <!--
     In this screen size, we have three tags child
     On the top left, the icon of Sogilis
@@ -40,56 +38,55 @@
          this button is transormed to a cross and the nav button appears.
     When we click on the top right button, the tag <nav> appears smoothy.
     -->
-        <a href="https://sogilis.fr/index.html">
-            <img alt="Logo Sogilis" src="{{ "images/logo_sogilis.svg" | relURL }}">
-        </a>
-        <a id="headerMenuButtonMobile" href="#">
-            <div>&nbsp;</div>
-        </a>
-        <!-- Navbar is displayed when we click on `headerMenuButtonMobile -->
-        <nav id="headerMainMenuMobile">
-            <div>
-              <!--
+    <a href="https://sogilis.fr/index.html">
+      <img alt="Logo Sogilis" src="{{ "images/logo_sogilis.svg" | relURL }}" />
+    </a>
+    <a id="headerMenuButtonMobile" href="#">
+      <div>&nbsp;</div>
+    </a>
+    <!-- Navbar is displayed when we click on `headerMenuButtonMobile -->
+    <nav id="headerMainMenuMobile">
+      <div>
+        <!--
                 In this `div`, there is the green line
                 (it's the pseudo-element `::before`)
                 This pseudo-element have `margin-top: 50%`
               -->
-            </div>
-            <ul>
-                <li>
-                    <a href="https://sogilis.fr/services-applications-cloud-native.html">
-                        {{i18n "cloudNativeApplications" }}
-                    </a>
-                </li>
-                <li>
-                    <a href="https://sogilis.fr/services-embarques-et-iot.html">
-                        {{ i18n "embeddedSoftwares" }}
-                    </a>
-                </li>
-                <li>
-                    <a href="https://sogilis.fr/services-logiciels-critiques.html">
-                        {{ i18n "criticalSoftwares" }}
-                    </a>
-                </li>
-                <li>
-                    <a href="https://sogilis.fr/vision.html">
-                        {{ i18n "ourVision" }}
-                    </a>
-                </li>
-                <li>
-                    <a href="https://sogilis.fr/contact.html">
-                        {{ i18n "contact" }}
-                    </a>
-                </li>
-            </ul>
-            <div>
-              <!--
+      </div>
+      <ul>
+        <li>
+          <a href="https://sogilis.fr/services-applications-cloud-native.html">
+            {{i18n "cloudNativeApplications" }}
+          </a>
+        </li>
+        <li>
+          <a href="https://sogilis.fr/services-embarques-et-iot.html">
+            {{ i18n "embeddedSoftwares" }}
+          </a>
+        </li>
+        <li>
+          <a href="https://sogilis.fr/services-logiciels-critiques.html">
+            {{ i18n "criticalSoftwares" }}
+          </a>
+        </li>
+        <li>
+          <a href="https://sogilis.fr/vision.html">
+            {{ i18n "ourVision" }}
+          </a>
+        </li>
+        <li>
+          <a href="https://sogilis.fr/contact.html">
+            {{ i18n "contact" }}
+          </a>
+        </li>
+      </ul>
+      <div>
+        <!--
                 The goal of this div is simply to center the `ul` element above
                 between two `div`.
                 (Into the first `div`, there is the green line).
               -->
-            </div>
-        </nav>
-    </div>
-
+      </div>
+    </nav>
+  </div>
 </header>
